syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package dewy;

service RegistryService {
  // Current returns the current artifact.
	rpc Current (CurrentRequest) returns (CurrentResponse);
  // Report reports the result of deploying the artifact.
  rpc Report (ReportRequest) returns (google.protobuf.Empty);
}

// CurrentRequest is the request to get the current artifact.
message CurrentRequest {
	string arch = 1;                  // arch is the CPU architecture of deployment environment.
  string os = 2;                    // os is the operating system of deployment environment.
  optional string arifact_name = 3; // artifact_name is the name of the artifact to fetch.
}

// CurrentResponse is the response to get the current artifact.
message CurrentResponse {
	string id = 1;                                   // id uniquely identifies the response.
  string tag = 2;                                  // tag uniquely identifies the artifact concerned.
  string artifact_url = 3;                         // artifact_url is the URL to download the artifact.
  optional google.protobuf.Timestamp created_at = 4; // created_at is the creation time of the release.
}

// ReportRequest is the request to report the result of deploying the artifact.
message ReportRequest {
	string id = 1;           // id is the ID of the response.
  string tag = 2;          // tag is the current tag of deployed artifact.
  string command = 3;      // command is the command that was used for deployment (server or assets).
  optional string err = 4; // err is the error that occurred during deployment. If Err is nil, the deployment is considered successful.
}
